# AI-Powered-Document-Q-A-System-using-RAG

./: .gitignore  README.md  data_loader.py  main.py  netlify-requirements.txt  netlify.toml  pyproject.toml  requirements.txt  streamlit_app.py  vector_db.py
netlify/functions/: api.py  inngest.py
netlify/functions/api/: api.py  requirements.txt
netlify/functions/inngest/: inngest.py
qdrant_local_storage/: meta.json
qdrant_local_storage/collection/docs/: storage.sqlite
static/: index.html
web/: index.html
